# xtouch_midi_ros2

./: README.md
midi_msgs/: CMakeLists.txt  package.xml
midi_msgs/msg/: Midi.msg
requirements/: apt_packages.txt  install_requirements.sh
xtouch_midi/: CMakeLists.txt  package.xml
xtouch_midi/include/xtouch_midi/: xtouch_node.hpp
xtouch_midi/launch/: xtouch_node.launch.py
xtouch_midi/src/: xtouch_node.cpp
